--- a/index.html
+++ b/index.html
@@ -12,36 +12,27 @@
   <title>Weather Dashboard</title>
 </head>
 <body>
-  <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#"> <i class="fas fa-sun"></i> Weather Dashboard <i class="far fa-snowflake"></i></a>
-  </nav>
-
-  <div class="container">
-    
-    <div class="main-body">
-        <div class="left-content">
-            <h3>Search for a City:</h3>
-            <div class="search-bar">
-                <input class="input" type="text"></input>
-                <button type="button"class="btn btn-info"><i class="fas fa-search"></i></button>
-            </div>
-            <div class="previousSearch">
-
-            </div>
+  <div id="header" class="text-center bg-dark">
+    <h1>Weather Dashboard</h1>
+</div>
+<div class="row">            
+    <div id="searchPanel">
+        <label><h4>Search For a City:</h4></label>
+        <div id="inputGroup">
+            <input id="searchInput" type="text">
+            <button id="searchBtn" class="btn searchBtn" data-toggle="tooltip" title="Search">
+                <i class="fas fa-search"></i>
+            </button>
+            <button id="clear" class="btn clearBtn" data-toggle="tooltip" title="Clear Search History"><i class="fas fa-times-circle"></i></button>
         </div>
-        <div class="right-content">
-            <div class="top-display">
-
-            </div>
-            <div class="middle-display">
-
-            </div>
-            <div class="bottom-display">
-
-            </div>
-        </div>
+        <div id="searches"></div>
     </div>
-</div> 
+
+    <div id="mainContent" class="col">
+        <div id="currentWeather"></div>
+        <div id="forecast"></div>
+    </div>
+</div>
 
 
 <!-- jQuery, Bootstrap JS, moment.js -->
