--- a/index.html
+++ b/index.html
@@ -12,25 +12,49 @@
   <title>Weather Dashboard</title>
 </head>
 <body>
-  <div id="header" class="text-center bg-dark">
+  <header class="header">
     <h1>Weather Dashboard</h1>
-</div>
-<div class="row">            
-    <div id="searchPanel">
-        <label><h4>Search For a City:</h4></label>
-        <div id="inputGroup">
-            <input id="searchInput" type="text">
-            <button id="searchBtn" class="btn searchBtn" data-toggle="tooltip" title="Search">
-                <i class="fas fa-search"></i>
-            </button>
-            <button id="clear" class="btn clearBtn" data-toggle="tooltip" title="Clear Search History"><i class="fas fa-times-circle"></i></button>
-        </div>
-        <div id="searches"></div>
-    </div>
+</header>
 
-    <div id="mainContent" class="col">
-        <div id="currentWeather"></div>
-        <div id="forecast"></div>
+<div class="container">
+    <div class="search">
+        <div class="row">
+            <h1>Search for a City:</h1>
+        </div>
+        <div class="row">
+            <input type="text" class="searchInput" placeholder="Seattle">
+            <button type="submit" class="searchBtn">
+            <i class="fas fa-search"></i>
+            </button>
+        </div>
+        <div class="historyItems"></div>
+    </div>
+    <div class="col-two-container">
+        <div class="forecast">
+            <div class="row">
+                <h1 class="cityName">City Name</h1>
+                <h1 class="currentDate"></h1>
+                <img class="weatherIcon"></img>
+            </div>
+            <div class="row">
+                <p class="temp">Temperature:</p>
+            </div>
+            <div class="row">
+                <p class="humidity">Humidity:</p>
+            </div>
+            <div class="row">
+                <p class="windSpeed">Wind Speed:</p>
+            </div>
+            <div class="row">
+                <p class="uvIndex">UV Index:</p>
+            </div>
+        </div>
+
+        <div class="five-day-container">
+            <h1>5-Day Forecast:</h1>
+            <div class="card-row">
+            </div>
+        </div>
     </div>
 </div>
 
