--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Search for a City:</h1>
         </div>
         <div class="row">
-            <input type="text" class="searchInput" placeholder="Seattle">
+            <input type="text" class="searchInput" placeholder="'Denver' or 'Miami'">
             <button type="submit" class="searchBtn">
             <i class="fas fa-search"></i>
             </button>
